chore: Code cleanup

--- a/notebooks/00-lab.ipynb
+++ b/notebooks/00-lab.ipynb
@@ -144,7 +144,7 @@
     "        \"sibsp\": 4,\n",
     "        \"parch\": 3,\n",
     "        \"fare\": 50.63,\n",
-    "        \"embarked\": \"s\"\n",
+    "        \"embarked\": \"s\",\n",
     "    },\n",
     "    {\n",
     "        \"personId\": \"WTibJ8zz\",\n",
@@ -154,7 +154,7 @@
     "        \"sibsp\": 1,\n",
     "        \"parch\": 1,\n",
     "        \"fare\": 72.75,\n",
-    "        \"embarked\": \"q\"\n",
+    "        \"embarked\": \"q\",\n",
     "    },\n",
     "    {\n",
     "        \"personId\": \"m04N6W5m\",\n",
@@ -164,7 +164,7 @@
     "        \"sibsp\": 0,\n",
     "        \"parch\": 3,\n",
     "        \"fare\": 84.17,\n",
-    "        \"embarked\": \"c\"\n",
+    "        \"embarked\": \"c\",\n",
     "    },\n",
     "    {\n",
     "        \"personId\": \"L30K9l5W\",\n",
@@ -174,7 +174,7 @@
     "        \"sibsp\": 4,\n",
     "        \"parch\": 5,\n",
     "        \"fare\": 181.33,\n",
-    "        \"embarked\": \"s\"\n",
+    "        \"embarked\": \"s\",\n",
     "    },\n",
     "    {\n",
     "        \"personId\": \"3ORYJD9e\",\n",
@@ -184,7 +184,7 @@
     "        \"sibsp\": 3,\n",
     "        \"parch\": 4,\n",
     "        \"fare\": 50.14,\n",
-    "        \"embarked\": \"s\"\n",
+    "        \"embarked\": \"s\",\n",
     "    },\n",
     "    {\n",
     "        \"personId\": \"bgQDaJTj\",\n",
@@ -194,7 +194,7 @@
     "        \"sibsp\": 0,\n",
     "        \"parch\": 0,\n",
     "        \"fare\": 103.77,\n",
-    "        \"embarked\": \"c\"\n",
+    "        \"embarked\": \"c\",\n",
     "    },\n",
     "    {\n",
     "        \"personId\": \"lxPRUYHq\",\n",
@@ -204,7 +204,7 @@
     "        \"sibsp\": 2,\n",
     "        \"parch\": 2,\n",
     "        \"fare\": 136.45,\n",
-    "        \"embarked\": \"s\"\n",
+    "        \"embarked\": \"s\",\n",
     "    },\n",
     "    {\n",
     "        \"personId\": \"apGYfspn\",\n",
@@ -214,7 +214,7 @@
     "        \"sibsp\": 3,\n",
     "        \"parch\": 3,\n",
     "        \"fare\": 99.51,\n",
-    "        \"embarked\": \"q\"\n",
+    "        \"embarked\": \"q\",\n",
     "    },\n",
     "    {\n",
     "        \"personId\": \"HULBK23B\",\n",
@@ -224,7 +224,7 @@
     "        \"sibsp\": 1,\n",
     "        \"parch\": 1,\n",
     "        \"fare\": 184.9,\n",
-    "        \"embarked\": \"s\"\n",
+    "        \"embarked\": \"s\",\n",
     "    },\n",
     "    {\n",
     "        \"personId\": \"NDcmeKIV\",\n",
@@ -234,7 +234,7 @@
     "        \"sibsp\": 0,\n",
     "        \"parch\": 2,\n",
     "        \"fare\": 25.48,\n",
-    "        \"embarked\": \"q\"\n",
+    "        \"embarked\": \"q\",\n",
     "    },\n",
     "    {\n",
     "        \"personId\": \"Fa4MXeaS\",\n",
@@ -244,7 +244,7 @@
     "        \"sibsp\": 1,\n",
     "        \"parch\": 2,\n",
     "        \"fare\": 58.35,\n",
-    "        \"embarked\": \"s\"\n",
+    "        \"embarked\": \"s\",\n",
     "    },\n",
     "]"
    ]
@@ -406,71 +406,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e1c5e31",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from celery import group\n",
-    "from celery.result import GroupResult\n",
-    "\n",
-    "# Assume 'add' is a Celery task\n",
-    "from .tasks import add\n",
-    "\n",
-    "# Create a group of tasks\n",
-    "job = group(add.s(i, i) for i in range(10))()\n",
-    "\n",
-    "# job is a GroupResult instance\n",
-    "print(job)  # This will print the GroupResult object\n",
-    "\n",
-    "# Get the task IDs\n",
-    "task_ids = job.children\n",
-    "print(task_ids)  # This will print the list of task IDs\n",
-    "\n",
-    "# Fetch results individually\n",
-    "results = [task.get() for task in job.children]\n",
-    "print(results)  # This will print the results of each task\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3c067868",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from celery import group\n",
-    "from celery.result import AsyncResult, GroupResult\n",
-    "\n",
-    "# Assume 'add' is a Celery task\n",
-    "from .tasks import add\n",
-    "\n",
-    "# Create a single task\n",
-    "single_task = add.delay(4, 6)\n",
-    "\n",
-    "# Create a group of tasks\n",
-    "group_of_tasks = group(add.s(i, i) for i in range(10))()\n",
-    "\n",
-    "\n",
-    "# Function to check if it's a single task or a group\n",
-    "def check_task_type(result):\n",
-    "    if isinstance(result, AsyncResult):\n",
-    "        print(\"This is a single task.\")\n",
-    "    elif isinstance(result, GroupResult):\n",
-    "        print(\"This is a group of tasks.\")\n",
-    "    else:\n",
-    "        print(\"Unknown type.\")\n",
-    "\n",
-    "\n",
-    "# Check the single task\n",
-    "check_task_type(single_task)  # Output: This is a single task.\n",
-    "\n",
-    "# Check the group of tasks\n",
-    "check_task_type(group_of_tasks)  # Output: This is a group of tasks.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "00fe080b",
    "metadata": {},
    "outputs": [],
@@ -487,34 +422,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2068ded2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "{\n",
-    "    \"task_name\": \"src.celery_pkg.tasks.ml_prediction_tasks.process_single_data\",\n",
-    "    \"result\": \"{'status': 'success', 'response': {'data': {'person_id': 'q0bPCRQH', 'survived': 1, 'probability': 0.87}, 'status': 'success', 'created_at': '2025-07-17T22:22:50.406151'}, 'sent_at': '2025-07-17T22:22:50.406610'}\",\n",
-    "    \"args\": [\n",
-    "        {\n",
-    "            \"person_id\": \"q0bPCRQH\",\n",
-    "            \"sex\": \"female\",\n",
-    "            \"age\": 66.48,\n",
-    "            \"pclass\": 2,\n",
-    "            \"sibsp\": 0,\n",
-    "            \"parch\": 0,\n",
-    "            \"fare\": 149.22,\n",
-    "            \"embarked\": \"q\",\n",
-    "            \"survived\": 0,\n",
-    "            \"created_at\": \"2025-07-17T22:22:50.104828\",\n",
-    "        }\n",
-    "    ],\n",
-    "    \"kwargs\": {},\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "ace37a4f",
    "metadata": {},
    "outputs": [],
@@ -522,17 +429,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "b4d1613f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'personId': 'WPtKDQbFvI', 'sex': 'male', 'age': 56.8, 'pclass': 1, 'sibsp': 0, 'parch': 0, 'fare': 265.37, 'embarked': 'q'}, {'personId': '6BZn0feSGA', 'sex': 'male', 'age': 13.73, 'pclass': 1, 'sibsp': 3, 'parch': 1, 'fare': 281.15, 'embarked': 's'}]\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "import string\n",
     "\n",
     "\n",
     "# Define a function to generate a random id\n",
-    "def generate_random_id(length: int = 8) -> str:\n",
+    "def generate_random_id(length: int = 10) -> str:\n",
     "    \"\"\"\n",
     "    Generate a random id string of a given length.\n",
     "\n",
@@ -573,11 +488,11 @@
     "        person = {\n",
     "            \"personId\": generate_random_id(),\n",
     "            \"sex\": random.choice(sex_options),\n",
-    "            \"age\": round(random.uniform(0.5, 80.0), 2),\n",
+    "            \"age\": round(random.uniform(0.8, 80.0), 2),\n",
     "            \"pclass\": random.randint(1, 3),\n",
     "            \"sibsp\": random.randint(0, 5),\n",
     "            \"parch\": random.randint(0, 5),\n",
-    "            \"fare\": round(random.uniform(5.0, 200.0), 2),\n",
+    "            \"fare\": round(random.uniform(5.0, 300.0), 2),\n",
     "            \"embarked\": random.choice(embarked_options),\n",
     "        }\n",
     "        person_data.append(person)\n",
@@ -586,15 +501,56 @@
     "\n",
     "\n",
     "# Generate a list of 10 random person data entries\n",
-    "person_data_list = generate_person_data(10)\n",
-    "print(person_data_list)\n",
+    "person_data_list = generate_person_data(150_000)\n",
+    "print(person_data_list[:2])\n",
     "\n",
-    "fp: str = \"./data/sample_data.jsonl\"\n",
     "\n",
-    "with open(fp, \"w\") as f:\n",
-    "    for person in person_data_list:\n",
-    "        f.write(json.dumps(person) + \"\\n\")\n"
+    "def save_json_data(filepath: str, data_format: Literal[\"json\", \"jsonl\"]) -> None:\n",
+    "    \"\"\"\n",
+    "    Saves a list of dictionaries to a file in either JSON or JSONL format.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    filepath : str\n",
+    "        The path to the file to be written\n",
+    "    data_format : Literal[\"json\", \"jsonl\"]\n",
+    "        If \"json\", the data is written as a single JSON object.\n",
+    "        If \"jsonl\", the data is written as a series of newline-separated JSON objects.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    None\n",
+    "    \"\"\"\n",
+    "    if data_format == \"json\":\n",
+    "        with open(filepath, \"w\") as f:\n",
+    "            json.dump(person_data_list, fp=f)\n",
+    "        return\n",
+    "    if data_format == \"json\":\n",
+    "        with open(filepath, \"w\") as f:\n",
+    "            for person in person_data_list:\n",
+    "                f.write(json.dumps(person) + \"\\n\")\n",
+    "        return"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "c6183a7d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fp: str = \"../data/sample_data.json\"\n",
+    "\n",
+    "save_json_data(fp, data_format=\"json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86ca8b7a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
