feat: Deployed all services with Docker

--- a/notebooks/00-lab.ipynb
+++ b/notebooks/00-lab.ipynb
@@ -547,10 +547,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86ca8b7a",
+   "id": "d7fed69b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "livenessProbe:\n",
+    "  exec:\n",
+    "    command:\n",
+    "      - rabbitmq-diagnostics\n",
+    "      - check_port_connectivity\n",
+    "  initialDelaySeconds: 60\n",
+    "  periodSeconds: 30\n",
+    "  timeoutSeconds: 10\n",
+    "  failureThreshold: 5\n",
+    "  successThreshold: 1\n",
+    "\n",
+    "readinessProbe:\n",
+    "  exec:\n",
+    "    command:\n",
+    "      - rabbitmq-diagnostics\n",
+    "      - ping\n",
+    "  initialDelaySeconds: 20\n",
+    "  periodSeconds: 10\n",
+    "  timeoutSeconds: 5\n",
+    "  failureThreshold: 3\n",
+    "  successThreshold: 1"
+   ]
   },
   {
    "cell_type": "code",
