chore: Removed helm and made app more resilient

--- a/notebooks/00-lab.ipynb
+++ b/notebooks/00-lab.ipynb
@@ -546,32 +546,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d7fed69b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "livenessProbe:\n",
-    "  exec:\n",
-    "    command:\n",
-    "      - rabbitmq-diagnostics\n",
-    "      - check_port_connectivity\n",
-    "  initialDelaySeconds: 60\n",
-    "  periodSeconds: 30\n",
-    "  timeoutSeconds: 10\n",
-    "  failureThreshold: 5\n",
-    "  successThreshold: 1\n",
-    "\n",
-    "readinessProbe:\n",
-    "  exec:\n",
-    "    command:\n",
-    "      - rabbitmq-diagnostics\n",
-    "      - ping\n",
-    "  initialDelaySeconds: 20\n",
-    "  periodSeconds: 10\n",
-    "  timeoutSeconds: 5\n",
-    "  failureThreshold: 3\n",
-    "  successThreshold: 1"
+    "a = {\"name\": \"Neidu\"}\n",
+    "len(a)"
    ]
   },
   {
